<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Signup View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="SignupViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="SignupViewController" customModule="UnitTest_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="47" translatesAutoresizingMaskIntoConstraints="NO" id="zV1-D7-Oj9">
                                <rect key="frame" x="20" y="64" width="374" height="196"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZbV-Er-NoI">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailTF"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="given-name"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U5D-OE-3Go">
                                        <rect key="frame" x="0.0" y="81" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordTF"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repeat Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uH9-Am-vzZ">
                                        <rect key="frame" x="0.0" y="162" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="repeatPasswordTF"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8xg-Rh-Pmv">
                                <rect key="frame" x="180" y="438" width="54" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="signupButton"/>
                                <state key="normal" title="Sign Up"/>
                                <connections>
                                    <action selector="tapSignupButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qyj-VY-y6B"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="zV1-D7-Oj9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="N1a-Dx-S5Y"/>
                            <constraint firstItem="8xg-Rh-Pmv" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Ufz-0N-4wR"/>
                            <constraint firstItem="8xg-Rh-Pmv" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="igj-dl-8Bk"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zV1-D7-Oj9" secondAttribute="trailing" constant="20" id="naG-Kw-IQt"/>
                            <constraint firstItem="zV1-D7-Oj9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="sw4-6e-yXa"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="b4l-aY-hSp"/>
                    <connections>
                        <outlet property="firstNameTextField" destination="ZbV-Er-NoI" id="u1p-So-Sns"/>
                        <outlet property="passwordTF" destination="U5D-OE-3Go" id="0DM-cZ-oDb"/>
                        <outlet property="repeatTF" destination="uH9-Am-vzZ" id="dlp-qF-KPh"/>
                        <outlet property="signupButton" destination="8xg-Rh-Pmv" id="Fye-cg-jSb"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1120" y="119"/>
        </scene>
        <!--Main View Controller-->
        <scene sceneID="JR0-E5-2mG">
            <objects>
                <viewController storyboardIdentifier="MainViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eQ3-da-Lj1" customClass="MainViewController" customModule="UnitTest_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="fyK-aL-igh">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="9b6-oc-b9B"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <navigationItem key="navigationItem" id="3C9-CC-nd4"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="AJg-HT-HnW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2093" y="105"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="p2u-Tr-YUM">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OLA-Bz-SUy" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="urG-xk-bgj">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qwT-jA-oAK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="226" y="119"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
